--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <meta property="og:url"           content="http://localhost:3000" />
+    <meta property="og:url"           content="https://hex-chess.azurewebsites.net/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="HexChess" />
-    <meta property="og:description"   content="Your description" />
+    <meta property="og:description"   content="Strategy Game" />
     <meta property="og:image"         content="./assets/images/pantalla3.png" />
 </head>
 <body>
