--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url"           content="https://hex-chess.azurewebsites.net/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="HexChess" />
-    <meta property="og:description"   content="Strategy Game" />
+    <meta property="og:description"   content="Juego de estrategia" />
     <meta property="og:image"         content="./assets/images/pantalla3.png" />
 </head>
 <body>
