--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="HexChess" />
     <meta property="og:description"   content="Juego de estrategia" />
-    <meta property="og:image"         content="./assets/images/pantalla3.png" />
+    <meta property="og:image"         content="./assets/images/cover.png" />
 </head>
 <body>
     <main id="root">Habilita JavaScript en tu navegador para disfrutar de la experiencia</main>
