--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,7 @@
     <meta property="og:image"         content="./assets/images/cover-photo.png" />
 </head>
 <body>
+    <div class="bubbles-circle"></div>
     <main id="root">Habilita JavaScript en tu navegador para disfrutar de la experiencia</main>
 </body>
 </html>
